--- a/public/style/style.css
+++ b/public/style/style.css
@@ -27,7 +27,7 @@ input[type="tel"],
 input[type="date"],
 input[type="password"],
 textarea {
-    width: 100%;
+    width: 80%;
     padding: 8px;
     margin-bottom: 12px;
     border: 1px solid #ccc;
@@ -57,8 +57,21 @@ button:hover {
 
 
 
-.xyu {
+.faa {
     position: absolute;
+
+    text-decoration: none;
+    color: #000;
+    font-weight: bold;
+    max-width: 250px;
+    background-color: antiquewhite;
+    padding: 30px;
+    border-radius: 8px;
+    margin-left: 35%;
+    margin-top: -35%;
+}
+
+.sas {
 
     text-decoration: none;
     color: #000;
@@ -67,8 +80,7 @@ button:hover {
     background-color: antiquewhite;
     padding: 30px;
     border-radius: 8px;
-    margin-left: 35%;
-    margin-top: -35%;
+
 }
 
 
