--- a/public/style/style.css
+++ b/public/style/style.css
@@ -77,6 +77,7 @@ button:hover {
     color: #000;
     font-weight: bold;
     max-width: 200px;
+    margin-top: 50px;
     background-color: antiquewhite;
     padding: 30px;
     border-radius: 8px;
@@ -155,4 +156,21 @@ header {
 
 .xyu:hover{
     background: #ff3d00;
+}
+
+.cont {
+    border: 1px solid white;
+    width: 300px;
+    overflow: hidden;
+}
+
+
+.cont img {
+    /*width: 100%;*/
+    /*height: 100%;*/
+    transition: 300ms linear;
+}
+
+.cont:hover img {
+    scale: 1.1;
 }
